--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -34,6 +34,14 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>
+                            <a href="#quzefei">曲泽飞</a>
+                            <ul>
+                                <li>
+                                    <a href="#quzefei-心系苍生">心系苍生</a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
             </ul>
@@ -51,6 +59,13 @@
                 <h2 id="triones" class="chapter-title chapter-title-first">北斗星</h2>
             </div>
             <img id="triones-指点江山" class="image mdui-center" src="images/triones-指点江山.png" alt="指点江山" />
+        </div>
+
+        <div class="chapter">
+            <div class="mdui-typo">
+                <h2 id="quzefei" class="chapter-title chapter-title-first">曲泽飞</h2>
+            </div>
+            <img id="quzefei-心系苍生" class="image mdui-center" src="images/quzefei-心系苍生.png" alt="心系苍生" />
         </div>
 
     </div>
