--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -32,6 +32,9 @@
                                 <li>
                                     <a href="#triones-指点江山">指点江山</a>
                                 </li>
+                                <li>
+                                    <a href="#triones-勾罕见">勾罕见</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -59,6 +62,7 @@
                 <h2 id="triones" class="chapter-title chapter-title-first">北斗星</h2>
             </div>
             <img id="triones-指点江山" class="image mdui-center" src="images/triones-指点江山.png" alt="指点江山" />
+            <img id="triones-勾罕见" class="image mdui-center" src="images/triones-勾罕见.png" alt="勾罕见" />
         </div>
 
         <div class="chapter">
