--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -54,22 +54,22 @@
             <div class="mdui-typo">
                 <h2 id="timestar" class="chapter-title chapter-title-first">时光星球</h2>
             </div>
-            <img id="timestar-时光帝国" class="image mdui-center" src="images/timestar-时光帝国.png" alt="时光帝国" />
+            <img id="timestar-时光帝国" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca3b2.png" alt="时光帝国" />
         </div>
 
         <div class="chapter">
             <div class="mdui-typo">
                 <h2 id="triones" class="chapter-title chapter-title-first">北斗星</h2>
             </div>
-            <img id="triones-指点江山" class="image mdui-center" src="images/triones-指点江山.png" alt="指点江山" />
-            <img id="triones-勾罕见" class="image mdui-center" src="images/triones-勾罕见.png" alt="勾罕见" />
+            <img id="triones-指点江山" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca544.png" alt="指点江山" />
+            <img id="triones-勾罕见" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca49c.png" alt="勾罕见" />
         </div>
 
         <div class="chapter">
             <div class="mdui-typo">
                 <h2 id="quzefei" class="chapter-title chapter-title-first">曲泽飞</h2>
             </div>
-            <img id="quzefei-心系苍生" class="image mdui-center" src="images/quzefei-心系苍生.png" alt="心系苍生" />
+            <img id="quzefei-心系苍生" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca33b.png" alt="心系苍生" />
         </div>
 
     </div>
