--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -13,7 +13,7 @@
 
     <div class="mdui-container mdui-text-color-black">
 
-        <nav class="toc">
+        <nav id="idiots" class="toc">
             <ul>
                 <li>
                     <a href="#idiots">奇人</a>
