--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -75,6 +75,7 @@
     </div>
 
     <script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
