--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -30,6 +30,9 @@
                             <a href="#triones">北斗星</a>
                             <ul>
                                 <li>
+                                    <a href="#triones-胡说八道">胡说八道</a>
+                                </li>
+                                <li>
                                     <a href="#triones-指点江山">指点江山</a>
                                 </li>
                                 <li>
@@ -61,6 +64,7 @@
             <div class="mdui-typo">
                 <h2 id="triones" class="chapter-title chapter-title-first">北斗星</h2>
             </div>
+            <img id="triones-胡说八道" class="image mdui-center" src="https://pic.imgdb.cn/item/643bcdb00d2dde5777caf9f1.jpg" alt="胡说八道" />
             <img id="triones-指点江山" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca544.png" alt="指点江山" />
             <img id="triones-勾罕见" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca49c.png" alt="勾罕见" />
         </div>
