--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -24,6 +24,9 @@
                                 <li>
                                     <a href="#timestar-时光帝国">时光帝国</a>
                                 </li>
+                                <li>
+                                    <a href="#timestar-三条边的四边形">三条边的四边形</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -58,6 +61,7 @@
                 <h2 id="timestar" class="chapter-title chapter-title-first">时光星球</h2>
             </div>
             <img id="timestar-时光帝国" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca3b2.png" alt="时光帝国" />
+            <img id="timestar-三条边的四边形" class="image mdui-center" src="https://pic2.imgdb.cn/item/6445ea790d2dde5777dac5ca.png" alt="三条边的四边形" />
         </div>
 
         <div class="chapter">
