--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -27,6 +27,9 @@
                                 <li>
                                     <a href="#timestar-三条边的四边形">三条边的四边形</a>
                                 </li>
+                                <li>
+                                    <a href="#timestar-追梦人">追梦人</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -62,6 +65,7 @@
             </div>
             <img id="timestar-时光帝国" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca3b2.png" alt="时光帝国" />
             <img id="timestar-三条边的四边形" class="image mdui-center" src="https://pic2.imgdb.cn/item/6445ea790d2dde5777dac5ca.png" alt="三条边的四边形" />
+            <img id="timestar-追梦人" class="image mdui-center" src="https://pic2.imgdb.cn/item/644a59f50d2dde5777c64587.png" alt="追梦人" />
         </div>
 
         <div class="chapter">
