--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -30,6 +30,15 @@
                                 <li>
                                     <a href="#timestar-追梦人">追梦人</a>
                                 </li>
+                                <li>
+                                    <a href="#timestar-人像识别">人像识别</a>
+                                </li>
+                                <li>
+                                    <a href="#timestar-时光奇论">时光奇论</a>
+                                </li>
+                                <li>
+                                    <a href="#timestar-时光奇论2">时光奇论2</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -66,6 +75,9 @@
             <img id="timestar-时光帝国" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca3b2.png" alt="时光帝国" />
             <img id="timestar-三条边的四边形" class="image mdui-center" src="https://pic2.imgdb.cn/item/6445ea790d2dde5777dac5ca.png" alt="三条边的四边形" />
             <img id="timestar-追梦人" class="image mdui-center" src="https://pic2.imgdb.cn/item/644a59f50d2dde5777c64587.png" alt="追梦人" />
+            <img id="timestar-人像识别" class="image mdui-center" src="https://pic2.imgdb.cn/item/644b6f9d0d2dde5777ff436e.png" alt="人像识别" />
+            <img id="timestar-时光奇论" class="image mdui-center" src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff6289.png" alt="时光奇论" />
+            <img id="timestar-时光奇论2" class="image mdui-center" src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff62ac.png" alt="时光奇论2" />
         </div>
 
         <div class="chapter">
