--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -11,95 +11,110 @@
 
 <body>
 
-    <div class="mdui-container mdui-text-color-black">
+    <div class="scroll" style="width: 100vw; height: 100vh; overflow: scroll;">
+        <div class="mdui-container mdui-text-color-black">
 
-        <nav id="idiots" class="toc">
-            <ul>
-                <li>
-                    <a href="#idiots">奇人</a>
-                    <ul>
-                        <li>
-                            <a href="#timestar">时光星球</a>
-                            <ul>
-                                <li>
-                                    <a href="#timestar-时光帝国">时光帝国</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-三条边的四边形">三条边的四边形</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-追梦人">追梦人</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-人像识别">人像识别</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-时光奇论">时光奇论</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-时光奇论2">时光奇论2</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#triones">北斗星</a>
-                            <ul>
-                                <li>
-                                    <a href="#triones-胡说八道">胡说八道</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-指点江山">指点江山</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-勾罕见">勾罕见</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#quzefei">曲泽飞</a>
-                            <ul>
-                                <li>
-                                    <a href="#quzefei-心系苍生">心系苍生</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+            <nav id="idiots" class="toc">
+                <ul>
+                    <li>
+                        <a data-scrollto="#idiots">奇人</a>
+                        <ul>
+                            <li>
+                                <a data-scrollto="#timestar">时光星球</a>
+                                <ul>
+                                    <li>
+                                        <a data-scrollto="#timestar-时光帝国">时光帝国</a>
+                                    </li>
+                                    <li>
+                                        <a data-scrollto="#timestar-三条边的四边形">三条边的四边形</a>
+                                    </li>
+                                    <li>
+                                        <a data-scrollto="#timestar-追梦人">追梦人</a>
+                                    </li>
+                                    <li>
+                                        <a data-scrollto="#timestar-人像识别">人像识别</a>
+                                    </li>
+                                    <li>
+                                        <a data-scrollto="#timestar-时光奇论">时光奇论</a>
+                                    </li>
+                                    <li>
+                                        <a data-scrollto="#timestar-时光奇论2">时光奇论2</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a data-scrollto="#triones">北斗星</a>
+                                <ul>
+                                    <li>
+                                        <a data-scrollto="#triones-胡说八道">胡说八道</a>
+                                    </li>
+                                    <li>
+                                        <a data-scrollto="#triones-指点江山">指点江山</a>
+                                    </li>
+                                    <li>
+                                        <a data-scrollto="#triones-勾罕见">勾罕见</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a data-scrollto="#quzefei">曲泽飞</a>
+                                <ul>
+                                    <li>
+                                        <a data-scrollto="#quzefei-心系苍生">心系苍生</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
 
-        <div class="chapter">
-            <div class="mdui-typo">
-                <h2 id="timestar" class="chapter-title chapter-title-first">时光星球</h2>
+            <div class="chapter">
+                <div class="mdui-typo">
+                    <h2 id="timestar" class="chapter-title chapter-title-first">时光星球</h2>
+                </div>
+                <img id="timestar-时光帝国" class="image mdui-center"
+                    src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca3b2.png" alt="时光帝国" />
+                <img id="timestar-三条边的四边形" class="image mdui-center"
+                    src="https://pic2.imgdb.cn/item/6445ea790d2dde5777dac5ca.png" alt="三条边的四边形" />
+                <img id="timestar-追梦人" class="image mdui-center"
+                    src="https://pic2.imgdb.cn/item/644a59f50d2dde5777c64587.png" alt="追梦人" />
+                <img id="timestar-人像识别" class="image mdui-center"
+                    src="https://pic2.imgdb.cn/item/644b6f9d0d2dde5777ff436e.png" alt="人像识别" />
+                <img id="timestar-时光奇论" class="image mdui-center"
+                    src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff6289.png" alt="时光奇论" />
+                <img id="timestar-时光奇论2" class="image mdui-center"
+                    src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff62ac.png" alt="时光奇论2" />
             </div>
-            <img id="timestar-时光帝国" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca3b2.png" alt="时光帝国" />
-            <img id="timestar-三条边的四边形" class="image mdui-center" src="https://pic2.imgdb.cn/item/6445ea790d2dde5777dac5ca.png" alt="三条边的四边形" />
-            <img id="timestar-追梦人" class="image mdui-center" src="https://pic2.imgdb.cn/item/644a59f50d2dde5777c64587.png" alt="追梦人" />
-            <img id="timestar-人像识别" class="image mdui-center" src="https://pic2.imgdb.cn/item/644b6f9d0d2dde5777ff436e.png" alt="人像识别" />
-            <img id="timestar-时光奇论" class="image mdui-center" src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff6289.png" alt="时光奇论" />
-            <img id="timestar-时光奇论2" class="image mdui-center" src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff62ac.png" alt="时光奇论2" />
-        </div>
 
-        <div class="chapter">
-            <div class="mdui-typo">
-                <h2 id="triones" class="chapter-title chapter-title-first">北斗星</h2>
+            <div class="chapter">
+                <div class="mdui-typo">
+                    <h2 id="triones" class="chapter-title chapter-title-first">北斗星</h2>
+                </div>
+                <img id="triones-胡说八道" class="image mdui-center"
+                    src="https://pic.imgdb.cn/item/643bcdb00d2dde5777caf9f1.jpg" alt="胡说八道" />
+                <img id="triones-指点江山" class="image mdui-center"
+                    src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca544.png" alt="指点江山" />
+                <img id="triones-勾罕见" class="image mdui-center"
+                    src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca49c.png" alt="勾罕见" />
             </div>
-            <img id="triones-胡说八道" class="image mdui-center" src="https://pic.imgdb.cn/item/643bcdb00d2dde5777caf9f1.jpg" alt="胡说八道" />
-            <img id="triones-指点江山" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca544.png" alt="指点江山" />
-            <img id="triones-勾罕见" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca49c.png" alt="勾罕见" />
-        </div>
 
-        <div class="chapter">
-            <div class="mdui-typo">
-                <h2 id="quzefei" class="chapter-title chapter-title-first">曲泽飞</h2>
+            <div class="chapter">
+                <div class="mdui-typo">
+                    <h2 id="quzefei" class="chapter-title chapter-title-first">曲泽飞</h2>
+                </div>
+                <img id="quzefei-心系苍生" class="image mdui-center"
+                    src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca33b.png" alt="心系苍生" />
             </div>
-            <img id="quzefei-心系苍生" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca33b.png" alt="心系苍生" />
-        </div>
 
+        </div>
     </div>
 
     <script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
+    <script src="js/smooth-scrollbar.js"></script>
+    <script src="js/overscroll.js"></script>
     <script src="index.js"></script>
+
 </body>
 
 </html>
