--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>奇人共赏</title>
     <link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css" />
+    <link rel="stylesheet" href="css/simple-scrollbar.css" />
     <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -111,8 +112,8 @@
     </div>
 
     <script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
-    <script src="js/smooth-scrollbar.js"></script>
-    <script src="js/overscroll.js"></script>
+    <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.min.js"></script>
+    <script src="js/simple-scrollbar.min.js"></script>
     <script src="index.js"></script>
 
 </body>
