--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -108,8 +108,12 @@
 
     </div>
 
+    <button id="fab" class="mdui-fab mdui-fab-fixed mdui-fab-mini" style="display: none;"><i
+            class="mdui-icon material-icons">arrow_upward</i></button>
+
     <script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
     <script src="index.js"></script>
+
 </body>
 
 </html>
