--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -72,6 +72,7 @@
             <div class="mdui-typo">
                 <h2 id="timestar" class="chapter-title chapter-title-first">时光星球</h2>
             </div>
+            <p class="contact">(QQ: <a href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=406631360">406631360</a> )</p>
             <img id="timestar-时光帝国" class="image mdui-center"
                 src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca3b2.png" alt="时光帝国" />
             <img id="timestar-三条边的四边形" class="image mdui-center"
@@ -90,6 +91,7 @@
             <div class="mdui-typo">
                 <h2 id="triones" class="chapter-title chapter-title-first">北斗星</h2>
             </div>
+            <p class="contact">(QQ: <a href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=1965654167">1965654167</a> )</p>
             <img id="triones-胡说八道" class="image mdui-center"
                 src="https://pic.imgdb.cn/item/643bcdb00d2dde5777caf9f1.jpg" alt="胡说八道" />
             <img id="triones-指点江山" class="image mdui-center"
@@ -102,6 +104,7 @@
             <div class="mdui-typo">
                 <h2 id="quzefei" class="chapter-title chapter-title-first">曲泽飞</h2>
             </div>
+            <p class="contact">(QQ: <a href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=3235314917">3235314917</a> )</p>
             <img id="quzefei-心系苍生" class="image mdui-center"
                 src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca33b.png" alt="心系苍生" />
         </div>
