--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -39,6 +39,9 @@
                                 <li>
                                     <a href="#timestar-时光奇论2">时光奇论2</a>
                                 </li>
+                                <li>
+                                    <a href="#timestar-时说新语">时说新语</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -93,6 +96,8 @@
                 src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff6289.png" alt="时光奇论" />
             <img id="timestar-时光奇论2" class="image mdui-center"
                 src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff62ac.png" alt="时光奇论2" />
+            <img id="timestar-时说新语" class="image mdui-center"
+                src="https://pic2.imgdb.cn/item/644e35700d2dde5777edd53e.png" alt="时说新语" />
         </div>
 
         <div class="chapter">
@@ -108,10 +113,10 @@
                 src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca544.png" alt="指点江山" />
             <img id="triones-勾罕见" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca49c.png"
                 alt="勾罕见" />
-            <img id="triones-lua取代java" class="image mdui-center" src="https://pic2.imgdb.cn/item/644dadb50d2dde57775cd549.png"
-                alt="lua取代java" />
-            <img id="triones-java退出舞台" class="image mdui-center" src="https://pic2.imgdb.cn/item/644dadb50d2dde57775cd4ed.png"
-                alt="java退出舞台" />
+            <img id="triones-lua取代java" class="image mdui-center"
+                src="https://pic2.imgdb.cn/item/644dadb50d2dde57775cd549.png" alt="lua取代java" />
+            <img id="triones-java退出舞台" class="image mdui-center"
+                src="https://pic2.imgdb.cn/item/644dadb50d2dde57775cd4ed.png" alt="java退出舞台" />
         </div>
 
         <div class="chapter">
