--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -16,7 +16,7 @@
         <nav id="idiots" class="toc">
             <ul>
                 <li>
-                    <a href="#idiots">奇人</a>
+                    <a href="#idiots">奇人语录</a>
                     <ul>
                         <li>
                             <a href="#timestar">时光星球</a>
@@ -74,6 +74,22 @@
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <a href="#idiots">奇人巨作</a>
+                    <ul>
+                        <li>
+                            <a href="#timestar">时光星球</a>
+                            <ul>
+                                <li>
+                                    <a href="#timestar-智能出题语音机器人">智能出题语音机器人</a>
+                                </li>
+                                <li>
+                                    <a href="#timestar-时光大制作">时光大制作</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </nav>
 
@@ -98,6 +114,12 @@
                 src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff62ac.png" alt="时光奇论2" />
             <img id="timestar-时说新语" class="image mdui-center"
                 src="https://pic2.imgdb.cn/item/644e35700d2dde5777edd53e.png" alt="时说新语" />
+            <video id="timestar-智能出题语音机器人" class="video mdui-center" controls="controls" data-desc="智能出题语音机器人">
+                <source src="https://imgbed.link/file/24658" type="video/mp4" />
+            </video>
+            <video id="timestar-时光大制作" class="video mdui-center" controls="controls" data-desc="时光大制作">
+                <source src="https://imgbed.link/file/24657" type="video/mp4" />
+            </video>
         </div>
 
         <div class="chapter">
