--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -13,9 +13,9 @@
 
     <div class="mdui-container mdui-text-color-black">
 
-        <nav id="idiots" class="toc">
+        <nav class="toc">
             <ul>
-                <li>
+                <li id="idiots">
                     <a href="#idiots">奇人语录</a>
                     <ul>
                         <li>
@@ -74,8 +74,8 @@
                         </li>
                     </ul>
                 </li>
-                <li>
-                    <a href="#idiots">奇人巨作</a>
+                <li id="trashes">
+                    <a href="#trashes">奇人巨作</a>
                     <ul>
                         <li>
                             <a href="#timestar">时光星球</a>
