--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -62,6 +62,9 @@
                                 <li>
                                     <a href="#triones-java退出舞台">java退出舞台</a>
                                 </li>
+                                <li>
+                                    <a href="#triones-胡言乱语">胡言乱语</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -139,6 +142,8 @@
                 src="https://pic2.imgdb.cn/item/644dadb50d2dde57775cd549.png" alt="lua取代java" />
             <img id="triones-java退出舞台" class="image mdui-center"
                 src="https://pic2.imgdb.cn/item/644dadb50d2dde57775cd4ed.png" alt="java退出舞台" />
+            <img id="triones-胡言乱语" class="image mdui-center"
+                src="https://pic2.imgdb.cn/item/6453650d0d2dde57778e76ea.png" alt="胡言乱语" />
         </div>
 
         <div class="chapter">
