--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -65,6 +65,9 @@
                                 <li>
                                     <a href="#triones-胡言乱语">胡言乱语</a>
                                 </li>
+                                <li>
+                                    <a href="#triones-安卓apk转苹果apk">安卓apk转苹果apk</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -144,6 +147,8 @@
                 src="https://pic2.imgdb.cn/item/644dadb50d2dde57775cd4ed.png" alt="java退出舞台" />
             <img id="triones-胡言乱语" class="image mdui-center"
                 src="https://pic2.imgdb.cn/item/6453650d0d2dde57778e76ea.png" alt="胡言乱语" />
+            <img id="triones-安卓apk转苹果apk" class="image mdui-center"
+                src="https://pic2.imgdb.cn/item/6457893c0d2dde5777621ec7.png" alt="安卓apk转苹果apk" />
         </div>
 
         <div class="chapter">
