--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -68,6 +68,9 @@
                                 <li>
                                     <a href="#triones-安卓apk转苹果apk">安卓apk转苹果apk</a>
                                 </li>
+                                <li>
+                                    <a href="#triones-这就是未来，听北斗星说">这就是未来，听北斗星说</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -149,6 +152,8 @@
                 src="https://pic2.imgdb.cn/item/6453650d0d2dde57778e76ea.png" alt="胡言乱语" />
             <img id="triones-安卓apk转苹果apk" class="image mdui-center"
                 src="https://pic2.imgdb.cn/item/6457893c0d2dde5777621ec7.png" alt="安卓apk转苹果apk" />
+            <img id="triones-这就是未来，听北斗星说" class="image mdui-center"
+                src="https://pic2.imgdb.cn/item/6459997b0d2dde57779505dd.png" alt="这就是未来，听北斗星说" />
         </div>
 
         <div class="chapter">
