--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -111,8 +111,8 @@
                 )</p>
             <img id="timestar-时光帝国" class="image mdui-center"
                 src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca3b2.png" alt="时光帝国" />
-            <img id="timestar-三条边的四边形" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/6445ea790d2dde5777dac5ca.png" alt="三条边的四边形" />
+            <img id="timestar-三条边的四边形" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960dQH.png"
+                alt="三条边的四边形" />
             <img id="timestar-追梦人" class="image mdui-center"
                 src="https://pic2.imgdb.cn/item/644a59f50d2dde5777c64587.png" alt="追梦人" />
             <img id="timestar-人像识别" class="image mdui-center"
@@ -163,11 +163,9 @@
             <p class="contact">(QQ: <a
                     href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=3235314917">3235314917</a>
                 )</p>
-            <img id="quzefei-心系苍生" class="image mdui-center"
-                src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca33b.png" alt="心系苍生" />
+            <img id="quzefei-心系苍生" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p9606Ff.png"
+                alt="心系苍生" />
         </div>
-
-        
 
     </div>
 
