--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -120,7 +120,7 @@
             <img id="timestar-时光奇论" class="image mdui-center"
                 src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff6289.png" alt="时光奇论" />
             <img id="timestar-时光奇论2" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff62ac.png" alt="时光奇论2" />
+                src="https://s1.ax1x.com/2023/05/13/p9600OA.png" alt="时光奇论2" />
             <img id="timestar-时说新语" class="image mdui-center"
                 src="https://pic2.imgdb.cn/item/644e35700d2dde5777edd53e.png" alt="时说新语" />
             <video id="timestar-智能出题语音机器人" class="video mdui-center" controls="controls" data-desc="智能出题语音机器人">
@@ -153,7 +153,7 @@
             <img id="triones-安卓apk转苹果apk" class="image mdui-center"
                 src="https://pic2.imgdb.cn/item/6457893c0d2dde5777621ec7.png" alt="安卓apk转苹果apk" />
             <img id="triones-这就是未来，听北斗星说" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/6459997b0d2dde57779505dd.png" alt="这就是未来，听北斗星说" />
+                src="https://s1.ax1x.com/2023/05/13/p9605mn.png" alt="这就是未来，听北斗星说" />
         </div>
 
         <div class="chapter">
