--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -71,6 +71,9 @@
                                 <li>
                                     <a href="#triones-这就是未来，听北斗星说">这就是未来，听北斗星说</a>
                                 </li>
+                                <li>
+                                    <a href="#triones-狗屁不通的数学证明">狗屁不通的数学证明</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -154,6 +157,8 @@
                 src="https://pic2.imgdb.cn/item/6457893c0d2dde5777621ec7.png" alt="安卓apk转苹果apk" />
             <img id="triones-这就是未来，听北斗星说" class="image mdui-center"
                 src="https://s1.ax1x.com/2023/05/13/p9605mn.png" alt="这就是未来，听北斗星说" />
+            <img id="triones-狗屁不通的数学证明" class="image mdui-center"
+                src="https://pic2.imgdb.cn/item/6462b10d0d2dde5777122cee.png" alt="狗屁不通的数学证明" />
         </div>
 
         <div class="chapter">
