--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -112,20 +112,20 @@
             <p class="contact">(QQ: <a
                     href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=406631360">406631360</a>
                 )</p>
-            <img id="timestar-时光帝国" class="image mdui-center"
-                src="https://pic.imgdb.cn/item/643aa6bf0d2dde57778ca3b2.png" alt="时光帝国" />
+            <img id="timestar-时光帝国" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960wyd.png"
+                alt="时光帝国" />
             <img id="timestar-三条边的四边形" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960dQH.png"
                 alt="三条边的四边形" />
-            <img id="timestar-追梦人" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/644a59f50d2dde5777c64587.png" alt="追梦人" />
-            <img id="timestar-人像识别" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/644b6f9d0d2dde5777ff436e.png" alt="人像识别" />
-            <img id="timestar-时光奇论" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/644b6fb70d2dde5777ff6289.png" alt="时光奇论" />
-            <img id="timestar-时光奇论2" class="image mdui-center"
-                src="https://s1.ax1x.com/2023/05/13/p9600OA.png" alt="时光奇论2" />
-            <img id="timestar-时说新语" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/644e35700d2dde5777edd53e.png" alt="时说新语" />
+            <img id="timestar-追梦人" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960sTP.png"
+                alt="追梦人" />
+            <img id="timestar-人像识别" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960NWD.png"
+                alt="人像识别" />
+            <img id="timestar-时光奇论" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960aSe.png"
+                alt="时光奇论" />
+            <img id="timestar-时光奇论2" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p9600OA.png"
+                alt="时光奇论2" />
+            <img id="timestar-时说新语" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960DeI.png"
+                alt="时说新语" />
             <video id="timestar-智能出题语音机器人" class="video mdui-center" controls="controls" data-desc="智能出题语音机器人">
                 <source src="https://imgbed.link/file/24658" type="video/mp4" />
             </video>
@@ -141,24 +141,24 @@
             <p class="contact">(QQ: <a
                     href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=1965654167">1965654167</a>
                 )</p>
-            <img id="triones-胡说八道" class="image mdui-center"
-                src="https://pic.imgdb.cn/item/643bcdb00d2dde5777caf9f1.jpg" alt="胡说八道" />
-            <img id="triones-指点江山" class="image mdui-center"
-                src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca544.png" alt="指点江山" />
-            <img id="triones-勾罕见" class="image mdui-center" src="https://pic.imgdb.cn/item/643aa6c00d2dde57778ca49c.png"
+            <img id="triones-胡说八道" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960gfS.jpg"
+                alt="胡说八道" />
+            <img id="triones-指点江山" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p96B43D.png"
+                alt="指点江山" />
+            <img id="triones-勾罕见" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960fyj.png"
                 alt="勾罕见" />
-            <img id="triones-lua取代java" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/644dadb50d2dde57775cd549.png" alt="lua取代java" />
-            <img id="triones-java退出舞台" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/644dadb50d2dde57775cd4ed.png" alt="java退出舞台" />
-            <img id="triones-胡言乱语" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/6453650d0d2dde57778e76ea.png" alt="胡言乱语" />
-            <img id="triones-安卓apk转苹果apk" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/6457893c0d2dde5777621ec7.png" alt="安卓apk转苹果apk" />
-            <img id="triones-这就是未来，听北斗星说" class="image mdui-center"
-                src="https://s1.ax1x.com/2023/05/13/p9605mn.png" alt="这就是未来，听北斗星说" />
-            <img id="triones-狗屁不通的数学证明" class="image mdui-center"
-                src="https://pic2.imgdb.cn/item/6462b10d0d2dde5777122cee.png" alt="狗屁不通的数学证明" />
+            <img id="triones-lua取代java" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960RSg.png"
+                alt="lua取代java" />
+            <img id="triones-java退出舞台" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960cY8.png"
+                alt="java退出舞台" />
+            <img id="triones-胡言乱语" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960hOs.png"
+                alt="胡言乱语" />
+            <img id="triones-安卓apk转苹果apk" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960WlQ.png"
+                alt="安卓apk转苹果apk" />
+            <img id="triones-这就是未来，听北斗星说" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p9605mn.png"
+                alt="这就是未来，听北斗星说" />
+            <img id="triones-狗屁不通的数学证明" class="image mdui-center" src="https://s1.ax1x.com/2023/05/16/p92Bjl8.png"
+                alt="狗屁不通的数学证明" />
         </div>
 
         <div class="chapter">
