--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -74,6 +74,9 @@
                                 <li>
                                     <a href="#triones-狗屁不通的数学证明">狗屁不通的数学证明</a>
                                 </li>
+                                <li>
+                                    <a href="#triones-学校学的是淘汰品">学校学的是淘汰品</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -159,6 +162,8 @@
                 alt="这就是未来，听北斗星说" />
             <img id="triones-狗屁不通的数学证明" class="image mdui-center" src="https://s1.ax1x.com/2023/05/16/p92Bjl8.png"
                 alt="狗屁不通的数学证明" />
+            <img id="triones-学校学的是淘汰品" class="image mdui-center" src="https://s1.ax1x.com/2023/05/18/p9fdGNR.png"
+                alt="学校学的是淘汰品" />
         </div>
 
         <div class="chapter">
