--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -87,6 +87,14 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>
+                            <a href="#yijianpa">一键爬</a>
+                            <ul>
+                                <li>
+                                    <a href="#yijianpa-垃圾AS">垃圾AS</a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li id="trashes">
@@ -175,6 +183,17 @@
                 )</p>
             <img id="quzefei-心系苍生" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p9606Ff.png"
                 alt="心系苍生" />
+        </div>
+
+        <div class="chapter">
+            <div class="mdui-typo">
+                <h2 id="yijianpa" class="chapter-title chapter-title-first">一键爬</h2>
+            </div>
+            <p class="contact">(QQ: <a
+                    href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=1053062792">1053062792</a>
+                )</p>
+            <img id="yijianpa-垃圾AS" class="image mdui-center" src="https://s1.ax1x.com/2023/06/25/pCNRIE9.png"
+                alt="垃圾AS" />
         </div>
 
     </div>
