--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -138,10 +138,10 @@
             <img id="timestar-时说新语" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960DeI.png"
                 alt="时说新语" />
             <video id="timestar-智能出题语音机器人" class="video mdui-center" controls="controls" data-desc="智能出题语音机器人">
-                <source src="https://imgbed.link/file/24658" type="video/mp4" />
+                <source src="https://lyzz.top/file/24658" type="video/mp4" />
             </video>
             <video id="timestar-时光大制作" class="video mdui-center" controls="controls" data-desc="时光大制作">
-                <source src="https://imgbed.link/file/24657" type="video/mp4" />
+                <source src="https://lyzz.top/file/24657" type="video/mp4" />
             </video>
         </div>
 
