--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -95,6 +95,17 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>
+                            <a href="#starboy">star哥</a>
+                            <ul>
+                                <li>
+                                    <a href="#starboy-比一比谁的star多">比一比谁的star多</a>
+                                </li>
+                                <li>
+                                    <a href="#starboy-不用md用nm">不用md用nm</a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li id="trashes">
@@ -194,6 +205,19 @@
                 )</p>
             <img id="yijianpa-垃圾AS" class="image mdui-center" src="https://s1.ax1x.com/2023/06/25/pCNRIE9.png"
                 alt="垃圾AS" />
+        </div>
+
+        <div class="chapter">
+            <div class="mdui-typo">
+                <h2 id="starboy" class="chapter-title chapter-title-first">star哥</h2>
+            </div>
+            <p class="contact">(QQ: <a
+                    href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=2821981550">2821981550</a>
+                )</p>
+            <img id="starboy-比一比谁的star多" class="image mdui-center" src="https://s1.ax1x.com/2023/07/07/pCchvsU.png"
+                alt="比一比谁的star多" />
+            <img id="starboy-不用md用nm" class="image mdui-center" src="https://s1.ax1x.com/2023/07/07/pCchxLF.png"
+                alt="不用md用nm" />
         </div>
 
     </div>
